--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Rodrigo Barboni Filho">
+	<meta name="description" content="Nova Era - Uma empresa que tem como objetivo formar os melhores profissionais florestais, para que cada vez mais possamos garantir mais empregos e profissionais de qualidade">
+	<meta name="keywords" content="Nova Era, Cursos, Retroescavadeira, Solda, Empilhadeira, Mecânicos Florestais, Máquinas Florestais">
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Página Inicial da Nova Era</title>
@@ -13,12 +16,12 @@
 		<img class="cabecalho-logo" src="images/logo-novaera.png" alt="Logo da Nova Era - Treinamentos">
 		<nav class="cabecalho-menu">
 			<ul class="cabecalho-menu-lista">
-				<li class="cabecalho-menu-lista-item"><a class="cabecalho-menu-lista-item-link" href="#">HOME</a></li>
-				<li class="cabecalho-menu-lista-item"><a class="cabecalho-menu-lista-item-link" href="#">QUEM SOMOS</a></li>
-				<li class="cabecalho-menu-lista-item"><a class="cabecalho-menu-lista-item-link" href="#cursos">CURSOS</a></li>
-				<li class="cabecalho-menu-lista-item"><a class="cabecalho-menu-lista-item-link" href="#">EAD</a></li>
-				<li class="cabecalho-menu-lista-item"><a class="cabecalho-menu-lista-item-link" href="#">SERVIÇOS</a></li>
-				<li class="cabecalho-menu-lista-item"><a class="cabecalho-menu-lista-item-link" href="#">CONTATO</a></li>
+				<li class="cabecalho-menu-lista-item"><a target="_self" class="cabecalho-menu-lista-item-link" href="#">HOME</a></li>
+				<li class="cabecalho-menu-lista-item"><a target="_self" class="cabecalho-menu-lista-item-link" href="quem-somos.html">QUEM SOMOS</a></li>
+				<li class="cabecalho-menu-lista-item"><a target="_self" class="cabecalho-menu-lista-item-link" href="#cursos">CURSOS</a></li>
+				<li class="cabecalho-menu-lista-item"><a target="_self" class="cabecalho-menu-lista-item-link" href="ead.html">EAD</a></li>
+				<li class="cabecalho-menu-lista-item"><a target="_self" class="cabecalho-menu-lista-item-link" href="servicos.html">SERVIÇOS</a></li>
+				<li class="cabecalho-menu-lista-item"><a target="_self" class="cabecalho-menu-lista-item-link" href="contato.html">CONTATO</a></li>
 			</ul>
 		</nav>
 		<div class="toggle-button">
@@ -37,7 +40,7 @@
 		</div>
 
 		<div class="conteudo-principal">
-			<h2 id="cursos" class="conteudo-principal-titulo">Aqui você pode econtrar cursos sobre</h2>
+			<h2 id="cursos" class="conteudo-principal-titulo">Aqui você pode encontrar cursos sobre</h2>
 			<div class="conteudo-principal-cursos"></div>
 			<div class="conteudo-principal-curso-detalhado">
 				<div id="retroescavadeira" class="curso-detalhado hide">
@@ -90,10 +93,8 @@
 		<p class="rodape-texto">&copy; <a class="rodape-link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
-
 <script src="scripts/showDivs.js"></script>
 <script src="scripts/createCards.js"></script>
 <script src="scripts/activateToggleButton.js"></script>
 <script src="scripts/scroll.js"></script>
-
 </html>
