--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="Nova Era, Cursos, Retroescavadeira, Solda, Empilhadeira, Mecânicos Florestais, Máquinas Florestais">
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	<link rel="stylesheet" href="styles/global.css">
+	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<title>Página Inicial da Nova Era</title>
 </head>
 <body onload="createCard()">
@@ -37,6 +37,7 @@
 			<section class="principal-hero-texto">
 				<h1 class="principal-hero-texto-titulo">Nova Era</h1>
 				<p class="principal-hero-texto-paragrafo">A anos ensinando com qualidade</p>
+        <div class="button-novidades">Saiba o que temos para você</div>
 			</section>
 		</div>
 
@@ -89,12 +90,13 @@
 			</div>
 		</div>
 	</main>
-
 	<footer class="rodape">
-		<p class="rodape-texto">&copy; <a class="rodape-link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
+		<p class="rodape-texto">&copy; <a class="rodape-link-github" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
 	</footer>
 </body>
 <script src="scripts/showDivs.js"></script>
 <script src="scripts/createCards.js"></script>
 <script src="scripts/activateToggleButton.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
