criando a pagina para o EAD

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </head>
 <body onload="createCard()">
 	<header class="header">
-		<a href="index.html"><img class="header__logo" src="images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
+		<a href="index.html"><img class="header__logo" src="../images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
 		<nav>
 			<ul class="header__nav__list">
-				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="#">HOME</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html">HOME</a></li>
 				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="quem-somos.html">QUEM SOMOS</a></li>
-				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="#courses">CURSOS</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html#courses">CURSOS</a></li>
 				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="ead.html">EAD</a></li>
 				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="servicos.html">SERVIÇOS</a></li>
 				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="contato.html">CONTATO</a></li>
