--- a/contato.html
+++ b/contato.html
@@ -6,8 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles/global.css">
     <title>Contato</title>
+
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
+    <header class="header">
+		<a href="index.html"><img class="header__logo" src="../images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
+		<nav>
+			<ul class="header__nav__list">
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html">HOME</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="quem-somos.html">QUEM SOMOS</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html#courses">CURSOS</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="ead.html">EAD</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="servicos.html">SERVIÇOS</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="contato.html">CONTATO</a></li>
+			</ul>
+		</nav>
+	</header>
+
     <h1>Contato</h1>
 </body>
 </html>
