--- a/ead.html
+++ b/ead.html
@@ -6,8 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles/global.css">
     <title>EAD</title>
+
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/style.css">
+		<link rel="stylesheet" href="styles/ead.css">
+
 </head>
 <body>
-    <h1>EAD</h1>
+	<header class="header">
+		<a href="index.html"><img class="header__logo" src="../images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
+		<nav>
+			<ul class="header__nav__list">
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html">HOME</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="quem-somos.html">QUEM SOMOS</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html#courses">CURSOS</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="ead.html">EAD</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="servicos.html">SERVIÇOS</a></li>
+				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="contato.html">CONTATO</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<div class="svg-wrapper">
+			<img src="images/EAD/hero/internet-draw.svg" alt="ilustração que representa a conectividade com o mundo" srcset="">
+		</div>
+		<div class="subscribe-area-wrapper">
+			<div class="subscribe-area-text-wrapper">
+				<h1>Conheça o nosso curso EAD</h1>
+				<p>
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique ullam eum qui iure placeat dolore deleniti debitis nam ratione alias. Esse repellat laborum nam suscipit quae asperiores ipsam distinctio impedit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam laboriosam totam minus doloribus temporibus ipsum in, optio nihil repellat eos eius quos soluta magnam, debitis tempora necessitatibus perspiciatis ea quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, commodi voluptatum eligendi tempore esse perferendis, voluptate, ipsum laborum eveniet a labore. Rem quas itaque incidunt odit, temporibus praesentium consectetur cupiditate!
+				</p>
+			</div>
+		</div>
+	</main>
+  
+	<footer class="footer">
+		<p class="footer__text">&copy; <a class="footer__link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
+	</footer>
 </body>
 </html>
