--- a/ead.html
+++ b/ead.html
@@ -9,12 +9,12 @@
 
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/style.css">
-		<link rel="stylesheet" href="styles/ead.css">
+	<link rel="stylesheet" href="styles/ead.css">
 
 </head>
 <body>
 	<header class="header">
-		<a href="index.html"><img class="header__logo" src="../images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
+		<a href="index.html"><img class="header__logo" src="images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
 		<nav>
 			<ul class="header__nav__list">
 				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html">HOME</a></li>
@@ -28,19 +28,20 @@
 	</header>
 
 	<main>
-		<div class="svg-wrapper">
-			<img src="images/EAD/hero/internet-draw.svg" alt="ilustração que representa a conectividade com o mundo" srcset="">
-		</div>
-		<div class="subscribe-area-wrapper">
-			<div class="subscribe-area-text-wrapper">
-				<h1>Conheça o nosso curso EAD</h1>
-				<p>
-					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique ullam eum qui iure placeat dolore deleniti debitis nam ratione alias. Esse repellat laborum nam suscipit quae asperiores ipsam distinctio impedit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam laboriosam totam minus doloribus temporibus ipsum in, optio nihil repellat eos eius quos soluta magnam, debitis tempora necessitatibus perspiciatis ea quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, commodi voluptatum eligendi tempore esse perferendis, voluptate, ipsum laborum eveniet a labore. Rem quas itaque incidunt odit, temporibus praesentium consectetur cupiditate!
-				</p>
+		<img src="images/EAD/hero/Mapa.png" alt="">
+		<div>
+			<h1>Conheça o nosso Curso EAD</h1>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate at praesentium tempore facere, beatae quam debitis? Aliquam tempore cupiditate, iste animi quaerat at exercitationem totam tenetur, recusandae, qui vel est!
+			</p>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere perspiciatis repudiandae iusto nihil aliquid, ea officia, at laudantium, provident quod. Aperiam ipsa dolores corrupti quaerat voluptates reiciendis accusantium facilis.
+			</p>
+			<div>
+				<a href="">INSCREVA-SE</a>
 			</div>
-		</div>
 	</main>
-  
+
 	<footer class="footer">
 		<p class="footer__text">&copy; <a class="footer__link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
 	</footer>
