arrumando as coisas para a conversa com o Paulinho

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body onload="createCard()">
 	<header class="header">
-		<a href="index.html"><img class="header__logo" src="../images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
+		<a href="index.html"><img class="header__logo" src="images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
 		<nav>
 			<ul class="header__nav__list">
 				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html">HOME</a></li>
