--- a/ead.html
+++ b/ead.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="styles/global.css">
     <title>EAD</title>
 
-    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/global.css">
 	<link rel="stylesheet" href="styles/ead.css">
 
 </head>
@@ -28,18 +28,21 @@
 	</header>
 
 	<main>
-		<img src="images/EAD/hero/Mapa.png" alt="">
-		<div>
-			<h1>Conheça o nosso Curso EAD</h1>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate at praesentium tempore facere, beatae quam debitis? Aliquam tempore cupiditate, iste animi quaerat at exercitationem totam tenetur, recusandae, qui vel est!
-			</p>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere perspiciatis repudiandae iusto nihil aliquid, ea officia, at laudantium, provident quod. Aperiam ipsa dolores corrupti quaerat voluptates reiciendis accusantium facilis.
-			</p>
-			<div>
+		<img src="images/EAD/hero/Mapa.svg" alt="">
+		<div class="column2 flex">
+			<div class="text-container">
+				<h1>Conheça o nosso Curso EAD</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate at praesentium tempore facere, beatae quam debitis? Aliquam tempore cupiditate, iste animi quaerat at exercitationem totam tenetur, recusandae, qui vel est!
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere perspiciatis repudiandae iusto nihil aliquid, ea officia, at laudantium, provident quod. Aperiam ipsa dolores corrupti quaerat voluptates reiciendis accusantium facilis.
+				</p>
+			</div>
+			<div class="subscribe-button">
 				<a href="">INSCREVA-SE</a>
 			</div>
+		</div>
 	</main>
 
 	<footer class="footer">
