Começando a desenvolver a página de Quem Somos

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles/global.css">
     <title>Quem Somos</title>
 
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/style.css">
-
+    <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" type="text/css" href="styles/quem_somos.css">
 </head>
 <body>
     <header class="header">
@@ -25,7 +24,21 @@
 			</ul>
 		</nav>
 	</header>
+  
+	<main>
+		<div class="content-container relevant-infos">
+			<img src="images/quem-somos/top-detail.svg" alt="detalhe no topo do container" class="top-detail">
+			<div class="relevant-infos__text-container">
+				<h1>Nova Era</h1>
+				<p>Uma empresa onde para cuidar do futuro preparamos o presente</p>
+			</div>
+			<img src="images/quem-somos/bottom-detail.svg" alt="detalhe no fundo do container" class="bottom-detail">
+		</div>
+	</main>
 
-    <h1>Quem Somos</h1>
+
+	<footer class="footer">
+		<p class="footer__text">&copy; <a class="footer__link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
+	</footer>
 </body>
 </html>
