Refatorando para o uso do Bootstrap

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -1,44 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quem Somos</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Quem Somos</title>
 
-    <link rel="stylesheet" type="text/css" href="styles/global.css">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" type="text/css" href="styles/global.css">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<link rel="stylesheet" type="text/css" href="styles/quem_somos.css">
+	<link 
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+		rel="stylesheet" 
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+		crossorigin="anonymous">
 </head>
 <body>
-    <header class="header">
-		<a href="index.html"><img class="header__logo" src="../images/logo-novaera.webp" alt="Logo da Nova Era - Treinamentos"></a>
-		<nav>
-			<ul class="header__nav__list">
-				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html">HOME</a></li>
-				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="quem-somos.html">QUEM SOMOS</a></li>
-				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="index.html#courses">CURSOS</a></li>
-				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="ead.html">EAD</a></li>
-				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="servicos.html">SERVIÇOS</a></li>
-				<li class="header__nav__list__item"><a target="_self" class="header__nav__list__item__link" href="contato.html">CONTATO</a></li>
-			</ul>
-		</nav>
-	</header>
-  
-	<main>
-		<div class="content-container relevant-infos">
-			<img src="images/quem-somos/top-detail.svg" alt="detalhe no topo do container" class="top-detail">
-			<div class="relevant-infos__text-container">
-				<h1>Nova Era</h1>
-				<p>Uma empresa onde para cuidar do futuro preparamos o presente</p>
-			</div>
-			<img src="images/quem-somos/bottom-detail.svg" alt="detalhe no fundo do container" class="bottom-detail">
-		</div>
-	</main>
-
-
-	<footer class="footer">
-		<p class="footer__text">&copy; <a class="footer__link" href="https://github.com/rodrigobarbonifilho">Feito por Rodrigo Barboni Filho</a></p>
-	</footer>
+	<nav>
+		<div class="navbar bg-light"></div>
+	</nav>
 </body>
 </html>
