--- a/quem-somos.html
+++ b/quem-somos.html
@@ -9,15 +9,29 @@
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<link rel="stylesheet" type="text/css" href="styles/quem_somos.css">
-	<link 
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
-		rel="stylesheet" 
-		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
-		crossorigin="anonymous">
 </head>
 <body>
-	<nav>
-		<div class="navbar bg-light"></div>
+	<!-- NAVBAR -->
+	<nav id="navbar" class="bg-contrast-color">
+		<div class="navbar-container">
+			<a href="index.html">
+				<img class="navbar__logo" src="images/logo-novaera.webp" alt="Logo da NovaEra">
+			</a>
+			<div class="navbar__toggle" id="navbar__toggle-js">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<div class="collapse-links bg-color-primary" id="collapse-links-js">
+				<ul class="navbar__list">
+					<li class="navbar__li"><a href="#" class="navbar__link">Home</a></li>
+					<li class="navbar__li"><a href="#" class="navbar__link">Quem Somos</a></li>
+					<li class="navbar__li"><a href="#" class="navbar__link">Cursos</a></li>
+					<li class="navbar__li"><a href="#" class="navbar__link">Ead</a></li>
+					<li class="navbar__li"><a href="#" class="navbar__link">Contato</a></li>
+				</ul>	
+		</div>
 	</nav>
 </body>
+<script src="activate-toggle-button.js"></script>
 </html>
