Arrumando as arquivaida, e animando o toggle button

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	<link rel="stylesheet" type="text/css" href="styles/quem_somos.css">
+	<link rel="stylesheet" type="text/css" href="styles/navbar.css">
 </head>
 <body>
 	<!-- NAVBAR -->
@@ -34,5 +34,5 @@
 		</div>
 	</nav>
 </body>
-<script src="activate-toggle-button.js"></script>
+<script src="activate_toggle_button.js"></script>
 </html>
