Adicionando uns Tchubiraudaudao

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -25,7 +25,7 @@
 			<div class="collapse-links bg-color-primary" id="collapse-links-js">
 				<ul class="navbar__list">
 					<li class="navbar__li"><a href="#" class="navbar__link">Home</a></li>
-					<li class="navbar__li"><a href="#" class="navbar__link">Quem Somos</a></li>
+					<li class="navbar__li"><a href="#" class="navbar__link active-link">Quem Somos</a></li>
 					<li class="navbar__li"><a href="#" class="navbar__link">Cursos</a></li>
 					<li class="navbar__li"><a href="#" class="navbar__link">Ead</a></li>
 					<li class="navbar__li"><a href="#" class="navbar__link">Serviços</a></li>
